<resources>
    <string name="app_name">My Guelph</string>
    <string name="app_map">Map</string>
    <string name="app_news">News</string>
    <string name="app_events">Events</string>
    <string name="app_info">Important Links</string>
    <string name="app_library">Campus Library</string>
    <string name="app_balance">Meal Card Balance</string>
    <string name="missing_credentials">You need to set up your username and password to proceed.</string>
    <string name="missing_network_connection">No network connection detected (WiFi or Mobile). You need a network connection to proceed.</string>
    <string name="missing_gps_connection">No GPS connection detected. You need a GPS connection to proceed.</string>
    <string name="positive_setup">Set Up</string>
    <string name="negative_cancel">Cancel</string>
    <string name="prefs_login_status">Login Status</string>
    <string name="prefs_username_title">Username</string>
    <string name="prefs_username_summary">Example: johndoe</string>
    <string name="prefs_username_dialog">Enter your username</string>
    <string name="prefs_password_title">Password</string>
    <string name="prefs_password_dialog">Enter your password</string>
    <string name="menu_about">About</string>
    <string name="about_title">About My Guelph</string>
    <string name="about_contents">My Guelph by Nick Presta&lt;br>&lt;a href="http://myguelph.android.nickpresta.ca/">Homepage&lt;/a>&lt;br>&lt;a href="mailto:myguelph@gmail.com">Email&lt;/a></string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_open_in_browser">Open in Browser</string>
    <string name="menu_map_clear">Clear Markers</string>
    <string name="menu_map_satellite_view">Satellite View</string>
    <string name="menu_map_map_view">Map View</string>
    <string name="main_news">News</string>
    <string name="main_news_description">Campus News</string>
    <string name="main_map">Map</string>
    <string name="main_map_description">Campus Map</string>
    <string name="main_events">Events</string>
    <string name="main_events_description">Events</string>
    <string name="main_info">Important Links</string>
    <string name="main_info_description">University Information</string>
    <string name="main_library">Library</string>
    <string name="main_library_description">Access your Library account</string>
    <string name="main_balance">Meal Card Balance</string>
    <string name="main_balance_description">View your meal card balance</string>
    <string name="library_login_url">https://insite.lib.uoguelph.ca/trellisAuthenticate/trellisLogin.cfm?PAGE=pbPatron&amp;PID=myguelph&amp;SEQ=20120101000000&amp;proxy=false</string>
    <string name="library_account_overview_url">http://trellis3.tug-libraries.on.ca/cgi-bin/Pwebrecon.cgi</string>
    <string name="mealCardBalanceTitle">Current Meal Card Balance</string>
    <string name="balance_login_url">https://www.hospitality.uoguelph.ca/accountservices/chooseaccount.cfm?action=balance</string>
    <string name="balance_details_url">https://www.hospitality.uoguelph.ca/accountservices/onlineinquiry.cfm</string>
    <string name="guelph_news_main_feed_url">http://feeds.feedburner.com/uoguelph</string>
    <string name="guelph_news_at_guelph_feed_url">http://atguelph.uoguelph.ca/feed/</string>
    <string name="guelph_news_gryphon_main_feed_url">http://gryphons.ca/rss.aspx</string>
    <string name="news_tab_main">Main</string>
    <string name="news_tab_atguelph">At Guelph</string>
    <string name="news_tab_gryphons">Gryphons</string>
    <string name="info_tab_core">Main</string>
    <string name="info_tab_secondary">Other</string>
    <string name="events_login_url">https://www.uoguelph.ca/studentaffairs/reg/login.cfm</string>
    <string name="guelph_events_main_feed_url">http://www.uoguelph.ca/studentaffairs/reg/rssfeed.cfm</string>
    <string name="register_confirmation">Are you sure?</string>
    <string name="want_to_register">Are you sure you want to register?</string>
    <string name="positive_register">Register</string>
    <string name="event_details_register">Register</string>
    <string name="event_details_register_link">https://www.uoguelph.ca/studentaffairs/reg/user.cfm</string>
    <string name="event_details_register_true">Currently Registered</string>
    <string name="event_details_register_false">Register</string>
    <string name="search_button">Search</string>
    <string-array name="buildings_array">
        <item>17 University (Family and Consumer Studies)</item>
        <item>25 University (Real Estate Division)</item>
        <item>575 Gordon (Residence)</item>
        <item>A.A. Thornbrough Building</item>
        <item>Alumni House</item>
        <item>Alumni Stadium</item>
        <item>Animal Biotechnology Embryo laboratory</item>
        <item>Animal Science and Nutrition</item>
        <item>Arboretum Information Booth</item>
        <item>Athletics Centre (W.F. Mitchell)</item>
        <item>Aviary</item>
        <item>Alexander Hall</item>
        <item>Axelrod Institute of Ichthyology</item>
        <item>Bio Control Building</item>
        <item>Biodiversity Institute of Ontario</item>
        <item>Bike Centre</item>
        <item>Blackwood Hall</item>
        <item>Botany Teaching Greenhouse</item>
        <item>Bullring Pub</item>
        <item>Central Animal Facility</item>
        <item>Central Utilities Plant</item>
        <item>CESA Building</item>
        <item>Chemistry</item>
        <item>Child Care and Learning Centre</item>
        <item>Cold Storage laboratory</item>
        <item>College Ave. Family Residence</item>
        <item>Computing and Communications Services Building</item>
        <item>The Conservatory</item>
        <item>Creelman Hall</item>
        <item>CRIFS Building</item>
        <item>Crop Science</item>
        <item>Crop Science Greenhouse</item>
        <item>Dairy Barn</item>
        <item>Day Hall</item>
        <item>Drew Hall</item>
        <item>East Residence</item>
        <item>Edmund C. Bovey Administrative Building</item>
        <item>Edmund C. Bovey laboratory</item>
        <item>Environmental Biology Annex #1</item>
        <item>Federal Building</item>
        <item>Fielding House</item>
        <item>Firehall</item>
        <item>Food Science</item>
        <item>Graham Hall</item>
        <item>Gryphon Centre</item>
        <item>Gryphon Dome</item>
        <item>Guelph Centre for Equine Research</item>
        <item>Guelph Food Technology Centre</item>
        <item>H.L. Hutt</item>
        <item>Hagen Aqualab</item>
        <item>Hales-McKay Memorial Shelter</item>
        <item>Header House/Greenhouse</item>
        <item>Hill\'s Pet Nutrition Primary Healthcare Centre</item>
        <item>Hilton Centre</item>
        <item>HOAD House (Residence)</item>
        <item>Housekeeping Building lane</item>
        <item>J.C. Hersey Building</item>
        <item>J.C. Taylor Nature Intrepretive Centre</item>
        <item>James Archibald Small Animal Clinic</item>
        <item>John T. Powell Building</item>
        <item>Johnston Hall</item>
        <item>Lambton Hall (Residence)</item>
        <item>Laboratory Services</item>
        <item>Landscape Architecture</item>
        <item>Lennox/Addington Hall (Residence)</item>
        <item>Livestock Pavilion</item>
        <item>Macdonald Hall</item>
        <item>Macdonald Institute</item>
        <item>Macdonald Stewart Art Centre</item>
        <item>Macdonald Stewart Hall</item>
        <item>MacKinnon Building</item>
        <item>MacLachlan Building</item>
        <item>MacNabb House</item>
        <item>MacNaughton Building</item>
        <item>Maids Hall (Residence)</item>
        <item>Maintenance Buildings</item>
        <item>Massey Hall</item>
        <item>McLaughlin Library</item>
        <item>McNally House</item>
        <item>Mills Hall</item>
        <item>O.A.C. Centennial Arboretum Centre</item>
        <item>OVC Biomedical Sciences</item>
        <item>OVC Clinical Research</item>
        <item>OVC Former VMI</item>
        <item>OVC Lifetime Learning Centre</item>
        <item>OVC Main Animal Holding</item>
        <item>OVC Main Building</item>
        <item>OVC Pathobiology AHL</item>
        <item>OMAFRA Building</item>
        <item>One Trent lane</item>
        <item>Paint Shop</item>
        <item>Physical Resources Building</item>
        <item>Plant Growth Facilities Building</item>
        <item>Presidents House</item>
        <item>Raithby House</item>
        <item>Reynolds Building</item>
        <item>Richards Building</item>
        <item>Rozanski Hall</item>
        <item>Science Complex</item>
        <item>Soil Science Greenhouse</item>
        <item>South Residence</item>
        <item>Stewart Building</item>
        <item>Townsend House (Apiculture Residence)</item>
        <item>TransCanada Institute</item>
        <item>Trent/Police Building</item>
        <item>University Centre</item>
        <item>Vehicle Services Building</item>
        <item>War Memorial Hall</item>
        <item>Watson Hall</item>
        <item>Wellington Woods</item>
        <item>Wild Bird Clinic</item>
        <item>Young House</item>
        <item>Zavitz Hall</item>
        <item>Zoology Annex #1</item>
        <item>Zoology Annex #2</item>
        <item>Zoology Annex #4</item>
    </string-array>
</resources>