<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">
  <PreferenceCategory
     android:title="Central Login Account">
     
    <EditTextPreference
        android:key="prefs_login_status"
        android:title="@string/prefs_login_status"
        android:enabled="false"
    />

    <EditTextPreference
        android:key="prefs_username"
        android:title="@string/prefs_username_title"
        android:summary="@string/prefs_username_summary"
        android:dialogTitle="@string/prefs_username_dialog"
    />
    
    <EditTextPreference
        android:key="prefs_password"
        android:title="@string/prefs_password_title"
        android:summary=""
        android:dialogTitle="@string/prefs_password_dialog"
        android:inputType="textPassword"
    />
     
  </PreferenceCategory>   
</PreferenceScreen>